2006-09-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  make writePidFile return the path to the pid file
	* flumotion/worker/main.py:
	  log a little more

2006-09-21  Michael Smith  <msmith@fluendo.com>

	* flumotion/manager/manager.py:
	  Backport to trunk: allow stopping components that are trying to
	  start, but haven't succeeded or explicitly failed.

2006-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  add an integration make target

2006-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* flumotion/test/Makefile.am:
	* flumotion/test/integration/Makefile.am:
	* flumotion/test/integration/__init__.py:
	* flumotion/test/integration/common.py:
	* flumotion/test/integration/test_qa.py:
	* flumotion/test/integration/test_torture.py:
	  Move integration outside of flumotion.test so we can separate it
	  from the unit test suite
	* tests/integration/common.py:
	  clean up the ugly path code a little bit

2006-09-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/http.xml:
	  Revert time-based bursting; will move this to a branch.

2006-09-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py:
	  do not set name with -n on worker/manager because they already have
	  sensible ways of figuring it out if not specified, and when
	  the worker does specify it it should take precedence

2006-09-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py
	(ComponentHeaven._startComponent): Until the network map is
	implemented, hack to allow intra-worker connections behind a
	firewall to work.

2006-09-19  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/http.xml:
	  burst-time property for http-streamer.